[package]
name = "ldk-python"
version = "0.1.0"
authors = ["Sergi Delgado Segura <sergi.delgado.s@gmail.com>"]
edition = "2018"

[lib]
name = "ldk_python"
crate-type = ["cdylib"]

[dependencies]
lightning = "0.0.12"
bitcoin = "0.24"
hex = "0.4.2"
pyo3 = { version = "0.12.3", features = ["extension-module"] }